devenv-tui/tests/snapshots/tui_tests__error_message_with_details.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
⠋ Building shell                     [TIME]
    error:
           … while evaluating
             at devenv.nix:10:5

           error: undefined variable 'pkgs'
  ✗ error: undefined variable 'pkgs'

                               ↑↓ j/k ^D/^U
