devenv-tui/tests/snapshots/tui_tests__error_message_with_parent.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
⠋ Building shell              [TIME]
  ✗ error: undefined variable 'pkgs'

                        ↑↓ j/k ^D/^U
