devenv-tui/tests/snapshots/tui_tests__error_message_without_details.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
⠋ Building shell [TIME]
  ✗ error: simple error

           ↑↓ j/k ^D/^U
