devenv-tui/tests/snapshots/tui_tests__error_with_active_builds.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
⠋ Building  hello-2.12 buildPhase [TIME]

 0/1 builds                 ↑↓ j/k ^D/^U
