devenv-tui/tests/snapshots/tui_tests__evaluating_activity.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
⠋ Building shell [TIME]

           ↑↓ j/k ^D/^U
