devenv-tui/tests/snapshots/tui_tests__fetch_tree_activity.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
⠋ Fetching  Fetching github:NixOS/nixpkgs [TIME]

                                    ↑↓ j/k ^D/^U
