devenv-tui/tests/snapshots/tui_tests__indeterminate_progress.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
⠋ Downloading  large-file.tar.gz from example.com [42MB] [TIME]

 0/1 downloads                                     ↑↓ j/k ^D/^U
