devenv-tui/tests/snapshots/tui_tests__many_concurrent_activities.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
⠋ Building  package-0 buildPhase                                   [TIME]
⠋ Downloading dependency-1 from cache.nixos.org                    [TIME]
    ──────────────────────────────────────────────────2MB / 10MB at 20MB/s
⠋ task-2                                                           [TIME]
⠋ Building shell                                                   [TIME]
⠋ Building  package-4 buildPhase                                   [TIME]
⠋ Downloading dependency-5 from cache.nixos.org                    [TIME]
    ──────────────────────────────────────────────────6MB / 10MB at 60MB/s
⠋ task-6                                                           [TIME]
⠋ Building shell                                                   [TIME]

 0/2 builds │ 0/2 downloads │ 0/2 tasks                      ↑↓ j/k ^D/^U
