devenv-tui/tests/snapshots/tui_tests__mixed_completed_and_active.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
✓ Building  dependency-a                                           [TIME]
✗ Building  dependency-b                                           [TIME]
⠋ Building  main-package buildPhase                                [TIME]
⠋ Downloading runtime-dep from cache.nixos.org                     [TIME]
    ───────────────────────────────────────────────────3MB / 5MB at 30MB/s

 1/3 builds │ 0/1 downloads                                  ↑↓ j/k ^D/^U
