devenv-tui/tests/snapshots/tui_tests__multiple_activities.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
⠋ Building  Building package-a buildPhase                          [TIME]
⠋ Downloading Downloading package-b                                [TIME]
    ─────────────────────────────────────────────────2.5kB / 5kB at 25kB/s
⠋ Running setup                                                    [TIME]

 0/1 builds │ 0/1 downloads │ 0/1 tasks                      ↑↓ j/k ^D/^U
