devenv-tui/tests/snapshots/tui_tests__multiple_error_messages.snap
---
source: devenv-tui/tests/tui_tests.rs
expression: output
---
 ✗ error: attribute 'foo' not found
 ✗ error: while evaluating 'bar': infinite
                                   ↑↓ nav • e expand
